Fix IE7 spacing
git-svn-id: file:///home/svn/AFV2006@4301 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/signature_ie7.css
+++ b/static/css/legacy/signature_ie7.css
@@ -1,12 +1,12 @@
 /* Cascading Style Sheet for Water Cooler Signatures. (C) 2005, 2006 Global Virtual Airlines Group. */
 TABLE.AFV_defaultSig {
 	width: 400px;
-	height: 135px;
+	height: 132px;
 	background-repeat: no-repeat;
 	padding: 0px;
 	border-color: #660000;
-	border-style: solid;
-	border-width: 30px 0px 22px 0px;
+	border-width: 25px 0px 25px 0px;
+	border: solid Navy;
 }
 
 DIV.AFV_defaultSigText {
@@ -15,7 +15,7 @@ DIV.AFV_defaultSigText {
 	text-align: center;
 	font-size: 10pt;
 	position: relative;
-	top: -48px;
+	top: -107px;
 }
 
 *.AFV_defaultSigText H2 {
